fixed height issue with tern copy height when viewed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body * {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 400px;
+    height: 600px;
     max-width: 100%;
     padding: 2.2rem;
     margin: 1.1rem;
